# OpenPyPony

./: ._boot_out.txt  ._code.py  ._settings.toml  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  ESP01_PROTOCOL.md  INTEGRATION_COMPLETE.md  Makefile  README.md  REFACTORING_STATUS.md  code.py  deploy.toml  setup_git_repo.sh
circuitpython/: PICO_GPIO_TABLE.md  RTC_SYNC_FIX.py  WIRING.md  accelerometer.py  binary_logger.py  code.py  config.py  debug.py  gps.py  gyroscope.py  hardware.py  hardware.toml  hardware_config.py  hardware_setup.py  icm20948.py  lis3mdl.py  logger.py  lsm6dsox.py  magnetometer.py  mpu6050.py  neopixel_handler.py  oled.py  pa1010d.py  pcf8523_rtc.py  requirements.txt  rtc_handler.py  sdcard.py  sensors.py  session.py  session_logger.py  settings.toml.example  unified_accelerometer.py  utils.py  webpages.py
circuitpython_gen2/: logger.py  scanner2.py
circuitpython_old/: README.md  code.py  requirements.txt
config/: .gitignore  hardware-v1.toml  hardware.toml.example  hardware_mpu6050.toml.example  settings.toml.example
copilot/: CMakeLists.txt
copilot/include/: binary_logger.h  consumer.h  gps.h  lis3dh.h  producer.h  ring_buffer.h  sd_mount.h  settings.h
copilot/src/: binary_consumer.c  binary_logger.c  consumer.c  consumer_sd.c  main.c  producer.c  ring_buffer.c  sd_mount.c  settings.c
copilot/src/drivers/: gps.c  lis3dh.c
docs/: BINARY_LOGGING_INTEGRATION.md  CLEAR_WD.py  CONFIG_README.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_UPDATE.md  HARDWARE_CONFIG.md  I2C-STEMMA-QT-Addresses.md  OPL_INFO_GUIDE.md  PIN_NAMING.md  README.md  TRACCAR_GUIDE.md  WEBSERVER_COMS.md  WIRING.md
esp32-s3/: README.md  partitions.csv  platformio.ini  sdkconfig.defaults
hardware/: ATGM Mount.scad  board_mount.scad  fixture-bracket.scad  fixture-bracket.stl  fixture.scad  fixture.stl  fixture_bottom.stl  fixture_top.stl  tripler.scad  tripler.stl
lib/: ._adafruit_sdcard.mpy  scheduler.py  wifi_server.py
logger_refactor/: BOM.md  code.py  config.py  gps.py  hardware_setup.py  main.py  sdcard.py  serial_com.py  storage.py  utils.py
tests/: gps_test.py
tools/: .gitignore  Makefile  deploy.toml  deploy_to_pico.py  gps_echotest.py  i2c_diagnostic.py  opl-diagnose.py  opl-info.py  opl2csv.py  opl2traccar.py  (+5 more)
(+42 files in other folders)
